fix(flight): fix hibernate query and test failures